welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:4: error: type lightGray is not a member of object java.awt.Color
      if (getCouleurSol():Color.lightGray) {
                                ^